-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.7.0
-
None
-
Mac OSX 10.7.5
-
0f05aa42daec491b46195a51eb0cd03bb4aa249a
If I place the cursor on a method (e.g. size of a QList) and press F1, the help topic for the size method is shown next to the editor. OK!
If I don't move the cursor and press a second time F1, the message "no documentation available" appears.
Now go to the (sub)class itself and press F1.
The help topic for QList appears.
Place the cursor back on "size", press F1. The help topic for size appears. Press F1 a second time and now the "big help pane" is shown with the focus on the size method.
The latter behavior is very convenient on small screens. 1xF1 = small help screen next to the editor, 2xF1 = big help = better to read. From here 2xESC brings me back to the editor. Faster and better than choosing "help" by mouse or CTRL-7, entering the keyword again and double-click on the topic.
| For Gerrit Dashboard: QTCREATORBUG-9093 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 86389,1 | Help: Fix that context help does not end up with focus | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |