Help: Fix that context help does not end up with focus

When opening a help url with anchor for context help, the help viewer
would loose focus, breaking behavior like pressing F1 twice to go to
help mode.

Task-number: QTCREATORBUG-9093
Change-Id: Ib6b6ecb4f6bec63f545c1f4ff973d878547f3ee1
Reviewed-by: Eike Ziller <eike.ziller@digia.com>